@@ -2,34 +2,20 @@ package com.google.daq.mqtt.validator;
 
 import static org.junit.Assert.assertEquals;
 
-import com.fasterxml.jackson.annotation.JsonInclude.Include;
-import com.fasterxml.jackson.core.JsonParser.Feature;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.databind.util.ISO8601DateFormat;
-import com.google.common.collect.ImmutableList;
 import com.google.daq.mqtt.validator.MessageReadingClient.OutputBundle;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.TreeMap;
 import org.junit.Test;
+import udmi.schema.DeviceValidationEvent;
+import udmi.schema.Level;
 import udmi.schema.ValidationEvent;
 
 /**
  * Tests based on validation of message trace playback.
  */
-public class PlaybackTest {
+public class PlaybackTest extends TestBase {
 
-  private static final ObjectMapper OBJECT_MAPPER =
-      new ObjectMapper()
-          .enable(Feature.ALLOW_COMMENTS)
-          .enable(SerializationFeature.INDENT_OUTPUT)
-          .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS)
-          .setDateFormat(new ISO8601DateFormat())
-          .setSerializationInclusion(Include.NON_NULL);
-
-  private static final String SCHEMA_SPEC = "../schema";
-  private static final String SITE_DIR = "../sites/udmi_site_model";
-  private static final String PROJECT_ID = "unit-testing";
   private static final String TRACE_BASE = "../validator/traces/";
 
   @Test
@@ -39,7 +25,30 @@ public class PlaybackTest {
     List<OutputBundle> outputMessages = client.getOutputMessages();
     ValidationEvent finalReport = asValidationEvent(
         outputMessages.get(outputMessages.size() - 1).message);
+    assertEquals("correct devices", 1, finalReport.summary.correct_devices.size());
     assertEquals("extra devices", 0, finalReport.summary.extra_devices.size());
+    assertEquals("missing devices", 2, finalReport.summary.missing_devices.size());
+    assertEquals("error devices", 1, finalReport.summary.error_devices.size());
+
+    assertEquals("device summaries", 1, finalReport.devices.size());
+    DeviceValidationEvent deviceSummary = finalReport.devices.get("AHU-1");
+    assertEquals("missing point", FILTER_DIFFERENTIAL_PRESSURE_SETPOINT, deviceSummary.missing_points.get(0));
+    assertEquals("device status", (Integer) Level.ERROR.value(), deviceSummary.status.level);
+  }
+
+  @Test
+  public void deviceArgs() {
+    MessageReadingClient client = validateTrace("simple",
+        List.of("--", "AHU-22", "SNS-4", "XXX", "YYY"));
+    assertEquals("trace message count", 7, client.messageCount);
+    List<OutputBundle> outputMessages = client.getOutputMessages();
+    ValidationEvent finalReport = asValidationEvent(
+        outputMessages.get(outputMessages.size() - 1).message);
+    assertEquals("correct devices", 1, finalReport.summary.correct_devices.size());
+    assertEquals("extra devices", 0, finalReport.summary.extra_devices.size());
+    assertEquals("missing devices", 3, finalReport.summary.missing_devices.size());
+    assertEquals("error devices", 0, finalReport.summary.error_devices.size());
+    assertEquals("device summaries", 0, finalReport.devices.size());
   }
 
   private ValidationEvent asValidationEvent(TreeMap<String, Object> message) {
@@ -52,12 +61,19 @@ public class PlaybackTest {
   }
 
   private MessageReadingClient validateTrace(String traceDir) {
+    return validateTrace(traceDir, List.of());
+  }
+
+  private MessageReadingClient validateTrace(String traceDir, List<String> additionalArgs) {
     String tracePath = TRACE_BASE + traceDir;
-    List<String> testArgs = ImmutableList.of(
+
+    List<String> testArgs = new ArrayList<>();
+    testArgs.addAll(List.of(
         "-p", PROJECT_ID,
         "-a", SCHEMA_SPEC,
         "-s", SITE_DIR,
-        "-r", tracePath);
+        "-r", tracePath));
+    testArgs.addAll(additionalArgs);
     Validator validator = new Validator(testArgs);
     validator.messageLoop();
     return validator.getMessageReadingClient();
